# poetry-association

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml  render.yaml
docs/: next_task_prompt.txt  poetry_association_tool_design_document.md  poetry_association_tool_v2_design_document.md  task_tempalte.md  todo.md
sample_data/: example_poems_real.csv  sample_poems.csv
scripts/: download_model.py  render_build.py  run_tasks.md  run_tasks.ps1  run_tasks_claude.ps1  run_tasks_codex.ps1
src/poem_assoc/: __main__.py  app.py  auth.py  cli.py  config.py  constants.py  csrf.py  csv_import.py  db.py  embedding.py  import_state.py  index_metadata.py  lexical.py  locks.py  rebuild.py  repository.py  search.py  startup_upgrade.py  synonyms.py  text_cleaning.py
tasks/: 001.md  002.md  003.md  004.md  005.md  006.md  007.md  008.md  009.md  010.md  011.md  012.md  013.md
tests/: conftest.py  test_admin_add.py  test_admin_dashboard.py  test_admin_delete.py  test_admin_edit.py  test_admin_import_cancellation.py  test_admin_import_execute.py  test_admin_import_upload.py  test_auth.py  test_cli_import.py  test_csrf.py  test_csv_import.py  test_embedding.py  test_entrypoints.py  test_index_metadata.py  test_lexical.py  test_locks.py  test_modal_partial.py  test_poem_route.py  test_rebuild.py  test_rebuild_route_gating.py  test_repository.py  test_scaffold.py  test_search_diagnostics.py  test_search_route.py  test_search_service.py  test_search_v2_exact.py  test_startup_upgrade.py  test_synonyms.py  test_text_cleaning.py  test_v2_regression.py
(+26 files in other folders)
