[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "poem_assoc"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0",
    "sentence-transformers>=2.2",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
